COD-109 스터디 카드 조회 로직 개발